--- a/分散的知识点笔记/2019-08-07.md
+++ b/分散的知识点笔记/2019-08-07.md
@@ -22,6 +22,7 @@ scp id_rsa playsand@***.***.*.***:/home/playsand/.ssh  这个星号代表的是p
 ```
 cd ~/.ssh    //检查是否有.ssh文件夹（存放密钥对）
 ssh-keygen      //生成密钥对，默认路径即可，其中第二步输入的密码用于登陆
+ssh-keygen -t rsa -C "邮箱地址"  //生成可用于github的密钥对
 cd .ssh        //cd到.ssh文件夹下
 cat id_rsa.pub     //显示公钥
 ```
@@ -46,7 +47,9 @@ git remote set-url origin git@github.com:xxxxx.git//项目ssh地址
 
 ### `git commit -m "init"`将文件提交到仓库（把暂存区的所有内容提交到当前分支）""里内容是提交的信息
 
-### `git push -u [远程仓库] [本地仓库]`推送
+### `git remote add origin git@github.com:xxxxx.git`关联一个远程仓库
 
-### ``
+### `git push -u origin master`第一次推送master分支的所有内容
+
+
 
