--- a/分散的知识点笔记/2019-08-07.md
+++ b/分散的知识点笔记/2019-08-07.md
@@ -41,25 +41,41 @@ git remote set-url origin git@github.com:xxxxx.git//项目ssh地址
 # Git命令 
 [初学Git--命令总结](https://www.cnblogs.com/chris0710/p/8925977.html)
 
-### `git init`将当前目录变成一个Git可以管理的仓库
 
-### `git add .`将目录下所有文件添加到暂存区
+```mermaid
+graph LR
+    A[创建一个仓库] --> B[添加文件到暂存区中]
+    B --> C[把文件提交到仓库中] 
+    C --> D[d]
+```
 
-### `git commit -m "init"`将文件提交到仓库（把暂存区的所有内容提交到当前分支）""里内容是提交的信息
+## 版本库
+
+#### `git init`将当前目录变成一个Git可以管理的仓库
+
+#### `git add <file>`将目录下文件添加到暂存区，使用add .可添加所有文件
+
+#### `git commit -m "init"`将文件提交到仓库（把暂存区的所有内容提交到当前分支）""里内容是备注
 
 ## 时光机穿梭
 
-### `git status`掌握仓库当前的状态
+#### `git status`掌握仓库当前的状态,查看是否有更改
+
+#### `git diff <file>`查看区别
+
+#### `git log`查看历史提交纪录，可以加上参数如（--pretty=oneline）,只显示版本号和备注
+#### `git reset`版本回退，参数：（--hard HEAD），--hard后可写版本号，即可去到不同的版本
+#### `git reflog`命令可让你记录每次一命令，就可以查看版本号，只要在版本回退前执行过`git log`
 
 ## 远程仓库（习惯称作origin）
 
-### `git remote add origin git@github.com:xxxxx.git`关联一个远程仓库
+#### `git remote add origin git@github.com:xxxxx.git`关联一个远程仓库
 
-### `git remote remove origin`移除远程仓库
+#### `git remote remove origin`移除远程仓库
 
-### `git push -u origin master`第一次推送master分支的所有内容
+#### `git push -u origin master`第一次推送master分支的所有内容
 
-###
+####
 
 
 
