'learn_git_note_update'

--- a/分散的知识点笔记/2019-08-07.md
+++ b/分散的知识点笔记/2019-08-07.md
@@ -45,8 +45,7 @@ git remote set-url origin git@github.com:xxxxx.git//项目ssh地址
 ```mermaid
 graph LR
     A[创建一个仓库] --> B[添加文件到暂存区中]
-    B --> C[把文件提交到仓库中] 
-    C --> D[d]
+    B --> C[把文件提交到当前分支中] 
 ```
 
 ## 版本库
@@ -55,17 +54,29 @@ graph LR
 
 #### `git add <file>`将目录下文件添加到暂存区，使用add .可添加所有文件
 
-#### `git commit -m "init"`将文件提交到仓库（把暂存区的所有内容提交到当前分支）""里内容是备注
+#### `git commit -m "init"`将文件提交到当前分支（把暂存区的所有内容提交到当前分支）""里内容是备注
 
 ## 时光机穿梭
 
 #### `git status`掌握仓库当前的状态,查看是否有更改
 
-#### `git diff <file>`查看区别
+#### `git diff <file>`查看区别,`git diff HEAD -- <file>`查看工作区和版本库里面最新版的区别
 
 #### `git log`查看历史提交纪录，可以加上参数如（--pretty=oneline）,只显示版本号和备注
-#### `git reset`版本回退，参数：（--hard HEAD），--hard后可写版本号，即可去到不同的版本
+#### `git reset --hard commit_id`版本回退，参数：（--hard HEAD），--hard后可写版本号，即可去到不同的版本
 #### `git reflog`命令可让你记录每次一命令，就可以查看版本号，只要在版本回退前执行过`git log`
+
+#### `git checkout -- <file>`把相应文件在工作区的修改全部撤销
+- 两种情况：
+- 一、文件修改后还没放进暂存区，撤销修改
+- 二、文件放进暂存区后修改，撤销修改，恢复到添加到暂存区后的状态
+
+#### `git reset HEAD <file>`可以把暂存区的修改撤销掉，重新放回工作区
+
+#### 已经提交了不合适的修改到版本库时，想要撤销本次提交，参考版本回退一节`git reset --hard `，不过前提是没有推送到远程库。
+
+#### `git add`添加文件，`git rm`删除文件，commit前发现操作错误，可以通过checkout复原，用版本库文件替换工作区的版本
+
 
 ## 远程仓库（习惯称作origin）
 
@@ -75,7 +86,10 @@ graph LR
 
 #### `git push -u origin master`第一次推送master分支的所有内容
 
-####
+#### `git clone git@github.com:xxxxx.git`克隆一个远程仓库并创建与之关联的本地库
 
+## 分支管理
+
+#### 
 
 
