--- a/分散的知识点笔记/2019-08-07.md
+++ b/分散的知识点笔记/2019-08-07.md
@@ -91,6 +91,16 @@ graph LR
 
 ## 分支管理
 
-#### 
+#### `git branch <branch name>`创建分支
 
+#### `git checkout <branch name>`切换到分支
 
+#### `git checkout -b <branch name>`创建并切换到分支
+
+#### `git branch`查看所有分支
+
+#### `git merge <branch name>`合并到当前分支，Fast-forward“快进模式”，就是直接把master指向被合并分支的当前提交
+
+#### `git branch -d <branch name>`删除分支
+
+#### 当无法自动合并分支时，必须首先解决冲突，解决后再提交，用`git log --graph`命令可以看到分支合并图
